# live-stream-1012-15

./: .env  .gitignore  docker-compose.yml
nautobot-plugin-iprange/: pyproject.toml
nautobot-plugin-iprange/nautobot_plugin_iprange/: __init__.py  filters.py  forms.py  models.py  tables.py  urls.py  views.py
nautobot-plugin-iprange/nautobot_plugin_iprange/api/: serializers.py  urls.py  views.py
nautobot-plugin-iprange/nautobot_plugin_iprange/migrations/: 0001_initial.py
nautobot-plugin-iprange/nautobot_plugin_iprange/templates/nautobot_plugin_iprange/: iprange.html
nautobot-plugin-iprange/nautobot_plugin_iprange/tests/: test_api.py  test_models.py  test_nautobot_plugin_iprange.py  test_ui.py
